--- a/sigs/0.html
+++ b/sigs/0.html
@@ -1,40 +1,52 @@
-<div style="display:table;width:450px;background:transparent !important;width:450px;font-family:Verdana,sans-serif;">
-  <div style="display:table-row;">
-    <div style="display:table-cell;border-bottom:1px solid;border-bottom-color:#4a6481;padding:10px 0 0 0;vertical-align:bottom;">
-      <span style="font-size:14pt;color:#4a6481;font-weight:bold;">${forename}&nbsp;${surname}</span>
-      <br />
-      <span style="font-size:10pt;color:#2c2c2c;">${role}</span>
-    </div>
-    <div style="display:table-cell;border-bottom:1px solid;border-bottom-color:#4a6481;padding:10px 0 0 0;vertical-align:top;color:#3b4908;">
-	  <a href="${website_url}" target="_blank">
-        <img alt="Logo" style="width:179px;height:auto;border:0;" src="${logo_url}">
-      </a>
-    </div> 
-  </div>		
-  <div style="display:table-row;font-size:10pt;color:#2c2c2c;line-height:18px;vertical-align:top;">
-    <div style="display:table-cell;width:60%;padding:10px 0 0 0;width:60%;">
-      &#128222; ${tel}
-      <br />
-      @ ${email}
-    </div>
-    <div style="display:table-cell;width:40%;padding:10px 0 0 0;vertical-align:top;width:40%;">
-      ${business}
-      <br />
-      ${address}
-      <br />
-      ${postcode}
-    </div>
-  </div>
-  <div style="display:table-row;">
-    <div style="display:table-cell;width:60%;padding:10px 0 0 0;vertical-align:top;width:60%">						
-      <a href="${facebook}" target="_blank" rel="noopener"><img alt="facebook icon" style="margin-right:5px;margin-bottom:1px;border:0;width:16px;height:16px;" src="https://imgmsgen.com/img/plaintext3-with-logo/fb.png"></a>&nbsp;
-      <a href="${instagram}" target="_blank" rel="noopener"><img alt="instagram icon" style="margin-right:5px;margin-bottom:1px;border:0;width:16px;height:16px;" src="https://imgmsgen.com/img/plaintext3-with-logo/it.png"></a>
-    </div>
-    <div style="display:table-cell;width:40%;padding:10px 0 0 0;vertical-align:top;width:40%;font-size:10pt;font-weight:bold;">			
-      <a href="${website_url}" target="_blank" rel="noopener" style="text-decoration:none;color:#4a6481;">
-        ${website}
-      </a>
-    </div>
-  </div>
+<div style="width:450px;background:transparent !important;width:450px;font-family:Verdana,sans-serif;">
+  <table>
+    <tr>
+      <td style="border-bottom:1px solid;border-bottom-color:#4a6481;padding:10px 0 0 0;vertical-align:bottom;">
+        <span style="font-size:14pt;color:#4a6481;font-weight:bold;">${forename}&nbsp;${surname}</span>
+        <br />
+        <span data-optional="role" style="font-size:10pt;color:#2c2c2c;">${role}</span>
+      </td>
+      <td style="border-bottom:1px solid;border-bottom-color:#4a6481;padding:10px 0 0 0;vertical-align:top;color:#3b4908;">
+	    <a href="${website_url}" target="_blank">
+          <img alt="Logo" style="width:179px;height:auto;border:0;" src="${logo_url}">
+        </a>
+      </td> 
+    </tr>		
+    <tr style="font-size:10pt;color:#2c2c2c;line-height:18px;vertical-align:top;">
+      <td style="width:60%;padding:10px 0 0 0;">
+        &#128222; ${tel}
+        <br />
+        @ ${email}
+      </td>
+      <td style="width:40%;padding:10px 0 0 0;vertical-align:top;width:40%;">
+        ${business}
+        <br />
+        ${address}
+        <br />
+        ${postcode}
+      </td>
+    </tr>
+    <tr data-optional="registration" style="font-size:10pt;color:#2c2c2c;line-height:18px;vertical-align:top;">
+      <td style="padding:10px 0 0 0;"></td>
+      <td style="width:40%;padding:10px 0 0 0;vertical-align:top;">
+        ${registration}
+      </td>
+    </tr>
+    <tr>
+      <td style="width:60%;padding:10px 0 0 0;vertical-align:top;width:60%">						
+        <a href="${facebook}" target="_blank" rel="noopener"><img alt="facebook icon" style="margin-right:5px;margin-bottom:1px;border:0;width:16px;height:16px;" src="https://imgmsgen.com/img/plaintext3-with-logo/fb.png"></a>&nbsp;
+        <a href="${instagram}" target="_blank" rel="noopener"><img alt="instagram icon" style="margin-right:5px;margin-bottom:1px;border:0;width:16px;height:16px;" src="https://imgmsgen.com/img/plaintext3-with-logo/it.png"></a>
+      </td>
+      <td style="width:40%;padding:10px 0 0 0;vertical-align:top;width:40%;font-size:10pt;font-weight:bold;">			
+        <a href="${website_url}" target="_blank" rel="noopener" style="text-decoration:none;color:#4a6481;">
+          ${website}
+        </a>
+      </td>
+    </tr>
+    <tr data-optional="disclaimer">
+      <td colspan="2" style="font-size:x-small;color:#0f0f0f">
+        ${disclaimer}
+      </td>
+    </tr>
+  </table>
 </div>
-
