--- a/sigs/4.html
+++ b/sigs/4.html
@@ -1,57 +1,70 @@
-<div style="display:table;width:420px;font-size:10pt;font-family:Arial,sans-serif;background:transparent!important;">
-  <div style="display:table-row;">
-    <div style="display:table-cell;font-size:10pt;border-right:1px solid #00a78d;width:200px;padding-right:10px;vertical-align:top;padding-bottom:20px;">
-      <div style="margin-bottom:25px;padding-bottom:0px;">
-        <div style="font-size:12pt;color:#00a78d;line-height:18pt;font-weight:bold;">${forename} ${surname}</div>
-        <div style="font-size:9pt;color:#717171; line-height:14pt;">${role}</div>
-      </div>  
-      <div>
-        <a href="${website_url}" target="_blank">
-          <img alt="Logo" style="width:159px;height:auto;border:0;" src="${logo_url}">
-        </a>
-      </div>
-    </div>
-    <div style="display:table-cell;padding-left:30px;padding-bottom:20px;vertical-align:top;font-size:9pt;color:#262626;"> 
-      <div style="display:table">
-        <div style="display:table-row">
-          <div style="display:table-cell;font-weight:bold;">
-            @
+<div style="width:420px;font-size:10pt;font-family:Arial,sans-serif;background:transparent!important;">
+  <table>
+    <tr>
+      <td style="font-size:10pt;border-right:1px solid #00a78d;width:200px;padding-right:10px;vertical-align:top;padding-bottom:20px;">
+        <div style="margin-bottom:25px;padding-bottom:0px;">
+          <div style="font-size:12pt;color:#00a78d;line-height:18pt;font-weight:bold;">${forename} ${surname}</div>
+          <div data-optional="role" style="font-size:9pt;color:#717171; line-height:14pt;">
+            ${role}
           </div>
-          <div style="display:table-cell;padding-left:5px;">
-            <a href="mailto:${email}" style="text-decoration:none;color:#262626;">
-              ${email}
-            </a>
-          </div>
+        </div>  
+        <div>
+          <a href="${website_url}" target="_blank">
+            <img alt="Logo" style="width:159px;height:auto;border:0;" src="${logo_url}">
+          </a>
         </div>
-        <div style="display:table-row">
-          <div style="display:table-cell;font-weight:bold;">
-            &#128222;
-          </div>
-          <div style="display:table-cell;padding-left:5px;">
-            ${tel}
-          </div>
-        </div>
-        <div style="display:table-row">
-          <div style="display:table-cell;font-weight:bold;">
-            &#x2709;
-          </div>
-          <div style="display:table-cell;padding-left:5px;">
-            ${business}, ${address} ${postcode}
-          </div>
-        </div>		
-      </div>		
-    </div>
-  </div>
-  <div style="display:table-row;">
-    <div style="display:table-cell;border-right:1px solid #00a78d;vertical-align:top;font-size:9pt;font-weight:bold;">
-      <a href="${website_url}" target="_blank" rel="noopener" style="text-decoration:none;color:#00a78d;">${website}</a>
-    </div>    
-    <div style="display:table-cell;padding-left:30px;vertical-align:top;"> 
-      <span>
-        <a href="${facebook}" target="_blank" rel="noopener"><img alt="facebook icon" style="border:0;height:26px;width:26px" src="https://imgmsgen.com/img/two-column-minimalist/fb.png"></a>&nbsp;</span>
-      <span>
-        <a href="${instagram}" target="_blank" rel="noopener"><img alt="instagram icon" style="border:0;height:26px;width:26px" src="https://imgmsgen.com/img/two-column-minimalist/it.png"></a>&nbsp;</span>
-    </div>
+      </td>
+      <td style="padding-left:30px;padding-bottom:20px;vertical-align:top;font-size:9pt;color:#262626;"> 
+        <table>
+          <tr>
+            <td style="font-weight:bold;">
+              @
+            </td>
+            <td style="padding-left:5px;">
+              <a href="mailto:${email}" style="text-decoration:none;color:#262626;">
+                ${email}
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td style="font-weight:bold;">
+              &#128222;
+            </div>
+            <td style="padding-left:5px;">
+              ${tel}
+            </div>
+          </tr>
+          <tr>
+            <td style="font-weight:bold;">
+              &#x2709;
+            </td>
+            <td style="padding-left:5px;">
+              ${business}, ${address} ${postcode}
+            </td>
+          </tr>		
+          <tr data-optional="registration">
+            <td style="width:79px;"></div>
+            <td style="padding-left:5px">
+              ${registration}
+            </td>
+          </tr>
+        </table>		
+      </td>
+    </table>
+    <tr>
+      <td style="border-right:1px solid #00a78d;vertical-align:top;font-size:9pt;font-weight:bold;">
+        <a href="${website_url}" target="_blank" rel="noopener" style="text-decoration:none;color:#00a78d;">${website}</a>
+      </td>    
+      <td style="padding-left:30px;vertical-align:top;"> 
+        <span>
+          <a href="${facebook}" target="_blank" rel="noopener"><img alt="facebook icon" style="border:0;height:26px;width:26px" src="https://imgmsgen.com/img/two-column-minimalist/fb.png"></a>&nbsp;</span>
+        <span>
+          <a href="${instagram}" target="_blank" rel="noopener"><img alt="instagram icon" style="border:0;height:26px;width:26px" src="https://imgmsgen.com/img/two-column-minimalist/it.png"></a>&nbsp;</span>
+      </td>
+    </tr>
+  </table>
+  <div data-optional="disclaimer" style="padding-top:10px;font-size:8pt;color:#999999;line-height:11px;text-align:justify;">
+    ${disclaimer}
   </div>
 </div>
-
+  
