Added gmail help

--- a/sigs.html
+++ b/sigs.html
@@ -149,8 +149,9 @@ The content of this email is confidential and intended for the recipients specif
       Help for mail tools
     </div>
     <div>
-      <button class="help_me" name="outlook"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Microsoft_Outlook_Icon_%282025%E2%80%93present%29.svg/250px-Microsoft_Outlook_Icon_%282025%E2%80%93present%29.svg.png" height="16" width="16" loading="lazy">Outlook</button>
-      <button class="help_me" name="thunderbird"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Thunderbird_2023_icon.png/250px-Thunderbird_2023_icon.png" width="16" height="16">Thunderbird</button>
+      <button class="help_me" name="gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_(2020).svg/200px-Gmail_icon_(2020).svg.png" height="16" width="16" loading-"lazy"> GMail</button>
+      <button class="help_me" name="outlook"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Microsoft_Outlook_Icon_%282025%E2%80%93present%29.svg/250px-Microsoft_Outlook_Icon_%282025%E2%80%93present%29.svg.png" height="16" width="16" loading="lazy"> Outlook</button>
+      <button class="help_me" name="thunderbird"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Thunderbird_2023_icon.png/250px-Thunderbird_2023_icon.png" width="16" height="16"> Thunderbird</button>
     </div>
 
     <div id="thunderbird_help" class="help hidden">
@@ -181,5 +182,21 @@ The content of this email is confidential and intended for the recipients specif
         <li>In the text box, Ctrl+V</li>
       </ol>
     </div>
-  </body>
+
+    <div id="gmail_help" class="help hidden">
+      Instructions for GMail used in a web browser (desktop)
+      <ol>
+        <li>Click "Copy HTML to clipboard"</li>
+        <li>Open GMail</li>
+        <li>Click on the gear icon</li>
+        <li>Click "See all settings"</li>
+        <li>Scroll down until you find "Signature"</li>
+        <li>Click "Create new"</li>
+        <li>Paste into the right hand edit box</li>
+        <li>If you want, select the signature name in "Signature defaults"</li>
+        <li>Scroll down to the bottom and click "Save changes"</li>
+      </ol>
+    </div>
+
+</body>
 </html>
