--- a/sigs.html
+++ b/sigs.html
@@ -146,7 +146,7 @@ The content of this email is confidential and intended for the recipients specif
     </div>
 
     <div style="margin-top:0.5em">
-      Help for mail tools
+      Help for mail tools (desktop)
     </div>
     <div>
       <button class="help_me" name="gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_(2020).svg/200px-Gmail_icon_(2020).svg.png" height="16" width="16" loading-"lazy"> GMail</button>
@@ -184,7 +184,7 @@ The content of this email is confidential and intended for the recipients specif
     </div>
 
     <div id="gmail_help" class="help hidden">
-      Instructions for GMail used in a web browser (desktop)
+      Instructions for GMail used in a web browser
       <ol>
         <li>Click "Copy HTML to clipboard"</li>
         <li>Open GMail</li>
